--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+/*:::::::::::::::::::::::::::::::::::::::
              CSS VARIABLE
-$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
+:::::::::::::::::::::::::::::::::::::::*/
 :root{
     --primary-text-color:#fff;
     --primary-bg-color:#033d77;
 
-    --secondary-text-color:#033d77;
+    --secondary-text-color:#0876e4;
     --secondary-bg-color:#f1c40f;
 
     --common-text-color:#fff;
@@ -20,9 +20,9 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
     --white-bg:#fff;
     
 }
-/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+/*:::::::::::::::::::::::::::::::::::::::
               COMMON CSS
-$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
+:::::::::::::::::::::::::::::::::::::::*/
 a{
     text-decoration: none;
     display: inline-block;
@@ -36,36 +36,63 @@ img{
     width: 100%;
     height: auto;
 }
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6,p{
     margin: 0;
     padding: 0;
 }
 
-/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+/*:::::::::::::::::::::::::::::::::::::::
               HEADER CSS
-$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/
+:::::::::::::::::::::::::::::::::::::::*/
+
+
+/*:::::::::::::::::::::::::::::::::::::::
+              TOP HEADER CSS
+:::::::::::::::::::::::::::::::::::::::*/
 .header .header_top{
     background-color: var(--secondary-bg-color);
-    --default-txt-color :#264a62;
+    
+}
+.header .header_top .timestamp .datetime{
+    color: var(--primary-txt-color);
 }
 .header .login_button a,
 .header .contact_info a{
-    --default-txt-color :#264a62;
+    color: var(--default-txt-color);
     border: 1px solid var(--white-border);
     padding: 0.3rem 0.8rem;
     border-radius: 1.1rem;
     transition: 0.4s;
+    font-size: .9rem;
 }
 .header .login_button a:hover,
 .header .contact_info a:hover{
-    background-color: var(--white-bg) ;
-    --default-txt-color :#264a62;
-    
+    background-color: var(--primary-bg-color);
+    color: var(--primary-text-color);
 }
+   
+    
+
+.header_middle .logo img{
+    width: 80px;
+    height: 80px;
+}
+
 
 .header_bottom{
     background-color: var(--secondary-bg-color);
 }
+.header_bottom .nav_item ul{
+    justify-content: space-between;
+}
+
 .header_bottom .nav_item ul li a{
-    --default-txt-color :#264a62;
+    color: var(--default-txt-color);
+    font-size: 1.3rem;
+    transition: 0.4s;
+    padding: .6rem .8rem;
+}
+.header_bottom .nav_item ul li a:hover{
+    background-color: var(--primary-bg-color);
+    color: var(--primary-text-color);
 }
