--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -7,34 +7,36 @@
     font-size: 0.8rem;
     color: var(--primary-txt-color);
   }
-  .header_bottom .nav_item ul li a {
-    font-size: 1.1rem;
+  .header .header_bottom .nav_item ul li a {
+    font-size: 1.3rem;
+    padding: 0.6rem 0.5rem;
   }
 }
 
 @media screen and (max-width: 992px) {
-  .header .header_bottom .nav_item {
-    position: relative;
+  .header .header_bottom {
+    /*  position: relative; */
   }
- 
-    .header .header_bottom .nav_item ul {
-        position: absolute;
-        background-color: var(--secondary-bg-color);
-        padding: 0;
-        margin-left: 0;
-        /*  width: 100%;  */ 
-        left: 100%; 
-        top: 1rem;
-        opacity: 0;
-        visibility: hidden; 
-        transition: 0.4s;
-    }
-    .header .header_bottom .nav_item ul.active{
-        opacity: 1;
-        visibility: visible;
-        left: 0;
-        width: 100%;
-    }
+
+  .header .header_bottom .nav_item ul {
+    position: absolute;
+    background-color: var(--secondary-bg-color);
+    padding: 0;
+    margin-left: 0;
+    width: 74%;
+    left: 100%;
+    top: 5rem;
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.4s;
+  }
+  .header .header_bottom .nav_item ul.active {
+    opacity: 1;
+    visibility: visible;
+    left: 40%;
+    width: 74%;
+  }
   .header .header_bottom .nav_item ul li {
     transition: 0.4s;
   }
@@ -42,12 +44,12 @@
     background-color: var(--primary-bg-color);
   }
   .header_bottom .nav_item ul li a {
-	padding: .4rem .8rem;
-}
+    padding: 0.4rem 0.8rem;
+  }
   .header .header_bottom .nav_item ul li:hover a {
     color: var(--primary-text-color);
   }
-  .header .header_bottom .toggle_btn{
+  .header .header_bottom .toggle_btn {
     color: var(--primary-text-color);
   }
 }
